<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/addActivity_editText_workType"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/strings_string_workTypeHint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="@dimen/dimensions_dimen_standardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/addActivity_seekBar_importance"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:max="5"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addActivity_textView_importanceInfoText" />

    <TextView
        android:id="@+id/addActivity_textView_importanceInfoText"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:text="@string/strings_string_importanceInfoText"
        android:textSize="@dimen/dimensions_dimen_standardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addActivity_editText_workType" />

    <Button
        android:id="@+id/addActivity_button_datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/strings_string_datePickerButtonText"
        android:textSize="@dimen/dimensions_dimen_standardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addActivity_textView_selectedImportance" />

    <TextView
        android:id="@+id/addActivity_textView_timeDifferenceInfo"
        android:layout_width="220dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/strings_string_timeDifference"
        android:textSize="@dimen/dimensions_dimen_standardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addActivity_textView_selectedDate" />

    <TextView
        android:id="@+id/addActivity_textView_selectedImportance"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/strings_string_selectedImportance"
        android:textSize="@dimen/dimensions_dimen_standardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addActivity_seekBar_importance" />

    <TextView
        android:id="@+id/addActivity_textView_timeDifference"
        android:layout_width="350dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="@dimen/dimensions_dimen_standardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addActivity_textView_timeDifferenceInfo" />

    <Button
        android:id="@+id/addActivity_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/strings_string_addButtonText"
        android:textSize="@dimen/dimensions_dimen_standardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addActivity_textView_timeDifference" />

    <TextView
        android:id="@+id/addActivity_textView_selectedDate"
        android:layout_width="350dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="@dimen/dimensions_dimen_standardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addActivity_textView_selectedDateInfo" />

    <TextView
        android:id="@+id/addActivity_textView_selectedDateInfo"
        android:layout_width="220dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/strings_string_selectedDate"
        android:textSize="@dimen/dimensions_dimen_standardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addActivity_button_datePicker" />

</androidx.constraintlayout.widget.ConstraintLayout>