<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/itemDetailsActivity_textView_work"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/strings_string_work"
        android:textSize="@dimen/dimensions_dimen_standardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/itemDetailsActivity_button_modifyWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/strings_string_modifyButtonHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailsActivity_textView_work" />

    <TextView
        android:id="@+id/itemDetailsActivity_textView_importance"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/strings_string_importance"
        android:textSize="@dimen/dimensions_dimen_standardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailsActivity_button_modifyWork" />

    <Button
        android:id="@+id/itemDetailsActivity_button_modifyImportance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/strings_string_modifyButtonHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailsActivity_textView_importance" />

    <TextView
        android:id="@+id/itemDetailsActivity_textView_date"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/strings_string_date"
        android:textSize="@dimen/dimensions_dimen_standardTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailsActivity_button_modifyImportance" />

    <Button
        android:id="@+id/itemDetailsActivity_button_modifyDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/strings_string_modifyButtonHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailsActivity_textView_date" />

    <Button
        android:id="@+id/itemDetailsActivity_button_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/strings_string_applyButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailsActivity_button_modifyDate" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/itemDetailsActivity_fab_deleteItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="35sp"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>